Fix button layout problem on mobile

--- a/_sass/quarkus.scss
+++ b/_sass/quarkus.scss
@@ -115,7 +115,7 @@ input[type="submit"] {
   @media screen and (max-width: 768px) {
     font-size: 1rem;
     line-height: 1rem;
-    padding: .75rem 1rem;
+    padding: .75rem 0;
   }
 }
 
